poc/tests/errors/test_FplVariableAlreadyDeclared_proof_02.fpl
TestNamespcase
{
    theory
    {
        proof Test$1
        {
            x: Nat
            y: Nat
            x: Nat
            1. assume premise
            2. |- false
            3. revoke /1
            4. |- qed
        }
    }
}
##############################

FplVariableAlreadyDeclared:9:13: The name 'x' was already declared in the current context at (7,13)